# benchmarks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dataspaces.conf  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug.yml
.github/workflows/: tests.yml
benchmarks/: README.md
benchmarks/simple-funcx/: README.md  benchmark.py  requirements.txt
docs/: README.md  colmena-rtt.md  endpoint-peering.md  endpoint-qps.md  funcx-tasks.md  globus-compute-tasks.md  stream-scaling.md  task-pipelining.md  task-rtt.md  workflow-memory.md
ps_bench/: __init__.py
psbench/: __init__.py  argparse.py  csv.py  ipfs.py  logging.py  memory.py  proxystore.py  results.py  runner.py  stream.py  utils.py
psbench/benchmarks/: protocol.py
psbench/benchmarks/colmena_rtt/: __main__.py  config.py  main.py
psbench/benchmarks/endpoint_peering/: __main__.py  main.py
psbench/benchmarks/endpoint_qps/: __main__.py  config.py  main.py  routes.py
psbench/benchmarks/funcx_tasks/: __main__.py  main.py
psbench/benchmarks/globus_compute_tasks/: __main__.py  main.py
psbench/benchmarks/remote_ops/: __main__.py  config.py  main.py  ops.py  redis_ops.py
psbench/benchmarks/stream_scaling/: config.py  generator.py  main.py  shims.py
psbench/benchmarks/streaming/: __main__.py  main.py
psbench/benchmarks/task_pipelining/: __main__.py  config.py  main.py
psbench/benchmarks/task_rtt/: config.py  main.py  tasks.py
psbench/benchmarks/template/: __main__.py  config.py  main.py
psbench/benchmarks/workflow/: __main__.py  main.py
psbench/benchmarks/workflow_memory/: config.py  main.py
psbench/config/: __init__.py  executor.py  general.py  ipfs.py  parsl.py  run.py  store.py  stream.py
psbench/executor/: dask.py  factory.py  globus.py  parsl.py  protocol.py
psbench/run/: colmena_rtt.py  endpoint_qps.py  remote_ops.py  stream_scaling.py  task_pipelining.py  task_rtt.py  template.py  workflow_memory.py
psbench/tasks/: pong.py
testing/: README.md  benchmark.py  colmena.py  executor.py  fixtures.py  funcx.py  globus_compute.py  ipfs.py  mocking.py  stream.py
tests/: README.md  __init__.py  argparse_test.py  conftest.py  csv_test.py  init_test.py  ipfs_test.py  logging_test.py  memory_test.py  proxystore_test.py  results_test.py  runner_test.py  stream_test.py  utils_test.py
tests/benchmarks/colmena_rtt/: config_test.py  main_test.py
tests/benchmarks/endpoint_peering/: main_test.py  ops_test.py
tests/benchmarks/endpoint_qps/: config_test.py  main_test.py  routes_test.py
tests/benchmarks/funcx_tasks/: main_test.py
tests/benchmarks/globus_compute_tasks/: main_test.py  task_test.py
tests/benchmarks/remote_ops/: config_test.py  endpoint_ops_test.py  main_test.py  ops_test.py  redis_ops_test.py
tests/benchmarks/stream_scaling/: config_test.py  generator_test.py  main_test.py
tests/benchmarks/task_pipelining/: config_test.py  main_test.py
tests/benchmarks/task_rtt/: config_test.py  main_test.py  task_test.py
tests/benchmarks/template/: config_test.py  main_test.py
tests/benchmarks/workflow/: main_test.py
tests/benchmarks/workflow_memory/: config_test.py  main_test.py
tests/config/: executor_test.py  general_test.py  ipfs_test.py  store_test.py  stream_test.py
tests/executor/: dask_test.py  factory_test.py  globus_test.py  parsl_test.py
tests/run/: colmena_rtt_test.py  endpoint_qps_test.py  remote_ops_test.py  stream_scaling_test.py  task_pipelining_test.py  task_rtt_test.py  template_test.py  workflow_memory_test.py
tests/tasks/: pong_test.py
