[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "psbench"
version = "0.1.1"
authors = [
    {name = "Globus Labs"},
    {name = "Greg Pauloski", email = "jgpauloski@uchicago.edu"},
]
maintainers = [
    {name = "Greg Pauloski", email = "jgpauloski@uchicago.edu"},
]
description = "ProxyStore benchmark suite."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "colmena[globus]@git+https://github.com/exalearn/colmena#egg=87447a4dc4fb2999b9bb83d95e2a8318110b05e5",
    "dask==2023.5.0; python_version < '3.9'",
    "dask==2024.2.0; python_version >= '3.9'",
    "distributed==2023.5.0; python_version < '3.9'",
    "distributed==2024.2.0; python_version >= '3.9'",
    "globus-compute-endpoint==2.13.0",
    "globus-compute-sdk==2.13.0",
    "proxystore[all]@git+https://github.com/proxystore/proxystore#egg=09121638cc59c8773036c71eda2bb51fa10b427b",
    "proxystore-ex>=0.1.2",
    "pydantic==1.10.14",
    "psutil==5.9.8",
    "redis==5.0.1",
    "requests==2.31.0",
]

[project.urls]
homepage = "https://proxystore.dev"
documentation = "https://proxystore.readthedocs.io"
repository = "https://github.com/proxystore/proxystore-benchmarks"

[project.optional-dependencies]
dev = [
    "covdefaults>=2.2",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff>=0.2.0",
    "tox",
    "types-psutil",
    "types-redis",
    "types-requests",
    "virtualenv",
]

[tool.codespell]
skip = """
.git,
.github,
__pycache__,
build,
dist,
.*egg-info
"""

[tool.coverage.run]
plugins = ["covdefaults"]
concurrency = ["multiprocessing", "thread"]
parallel = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "testing.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::proxystore.warnings.ExperimentalWarning",
    "ignore::DeprecationWarning:proxystore.*",
]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
# See all rules here: https://beta.ruff.rs/docs/rules
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # PyLint
    "PLE", "PLW",
    # ruff-specific
    "RUF",
]
extend-ignore = [
    "D10",
    # Allow builtin attribute shadowing
    "A003",
    # Ruff will change all([generator]) to all(generator) because the all/any
    # generator expressions directly and the list comprehension is not needed.
    # However, coverage marks unfinished generators as not covered and
    # all/any can early exit before exhausting the generator.
    "C419",
    # Allow pytest.raises() without match
    "PT011",
    # Allow nested contexts
    "SIM117",
]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["psbench", "test", "testing"]
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401", "D104"]
"*/*_test.py" = ["D10"]
"benchmarks/*" = ["D10"]
"tests/conftest.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]
namespaces = false
